[package]
name = "khash"
description = "Kana hashes"
version = "1.0.0"
authors = ["Avril <flanchan@cumallover.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
sha2 = "0.9"
malloc-array = "1.4"
libc = "0.2"
crc = "1.8"
hex-literal = "0.2"
getrandom = "0.1"
