[package]
name = "khash"
description = "Kana hashes"
version = "2.0.4"
authors = ["Avril <flanchan@cumallover.me>"]
edition = "2018"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[features]
default = ["ffi", "crc"]

ffi = ["libc", "malloc-array"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "unwind"

[dependencies]
sha2 = "0.9"
malloc-array = {version = "1.4", optional=true}
libc = {version = "0.2", optional=true}
crc = {version = "1.8", optional=true}
hex-literal = "0.3"
getrandom = "0.1"

[build-dependencies]
rustc_version = "0.2"
